force-app/main/default/objects/trade__c/trade__c.object-meta.xml
<CustomObject>
    <label>trade</label>
    <nameField>
        <displayFormat>trade-{0000}</displayFormat>
        <label>Trade ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>