force-app/main/default/objects/trade__c/fields/Base_Asset__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset</label>
    <referenceTo>Trade_Asset__c</referenceTo>
    <relationshipLabel>trades</relationshipLabel>
    <relationshipName>basetrade</relationshipName>
    <type>Lookup</type>
</CustomField>