force-app/main/default/objects/trade__c/fields/exchange__c.field-meta.xml
<CustomField>
    <fullName>exchange__c</fullName>
    <defaultValue>&quot;binance&quot;</defaultValue>
    <label>exchange</label>
    <length>25</length>
    <type>Text</type>
</CustomField>