force-app/main/default/objects/trade__c/fields/Quote_Asset__c.field-meta.xml
<CustomField>
    <fullName>Quote_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Asset</label>
    <referenceTo>Trade_Asset__c</referenceTo>
    <relationshipLabel>trades (Quote Asset)</relationshipLabel>
    <relationshipName>trades</relationshipName>
    <type>Lookup</type>
</CustomField>